@@ -1,3 +1,9 @@
+2007-09-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file.[ch]:
+        Add nautilus_file_get_location () and use it when
+	generating uris.
+
 2007-09-19  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-directory.c:
